Started with pre page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
     />
   </head>
   <body>
+    <div class="start-page">
+      <img src="cloud.png" alt="cloud" class="big-cloud" />
+      <div class="cloud-content">
+        <p>What's your name?</p>
+        <h1 class="greeting">Good Morning!</h1>
+        <h2 class="time-title">Time</h2>
+        <h2 class="theme-title">Theme</h2>
+      </div>
+    </div>
+
     <div class="page-container">
-      <h1>Head in the Clouds</h1>
+      <h1 class="title">Head in the Clouds</h1>
       <div class="container">
         <div class="timer-container">
           <button>5:00</button>
