--- a/index.html
+++ b/index.html
@@ -13,16 +13,44 @@
   </head>
   <body>
     <div class="start-page">
-      <img src="cloud.png" alt="cloud" class="big-cloud" />
+      <img src="cloud.svg" alt="cloud" class="big-cloud" />
       <div class="cloud-content">
-        <p>What's your name?</p>
         <h1 class="greeting">Good Morning!</h1>
-        <h2 class="time-title">Time</h2>
-        <h2 class="theme-title">Theme</h2>
+        <p>What's your name?</p>
+        <input type="text" id="name" name="name" class="input-name"/>
+        <input type="submit" value="OK" class="ok-button">
+        <div class="time-theme-flex">
+          <div>
+            <!-- <button class="time-title" onclick="timeFunction()">Time</button> -->
+            <h2 class="time-title">Time</h1>
+            <div class="time-menu"></div>
+            <input class="time-input" min="5" value="5" type="number" />
+          </div>
+          <div>
+            <h2 class="theme-title">Theme</h2>
+
+              <form action="#">
+                <select id="theme" name="theme">
+                  <option value="rain">Rain</option>
+                  <option value="ocean">Ocean</option>
+                  <option value="forest">Forest</option>
+                  <option value="fire">Fire</option>
+                </select>
+              </form>
+            <!-- <div class="theme-menu">
+              <ul>
+                <li>Rain</li>
+                <li>Ocean</li>
+                <li>Forest</li>
+                <li>Fire</li>
+              </ul>
+            </div> -->
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="page-container">
+    <!-- <div class="page-container">
       <h1 class="title">Head in the Clouds</h1>
       <div class="container">
         <div class="timer-container">
@@ -50,6 +78,6 @@
         </div>
       </div>
       <script src="script.js"></script>
-    </div>
+    </div> -->
   </body>
 </html>
