--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           </div>
           <div>
             <h2 class="theme-title">Theme</h2>
+            <div class="theme-flex">
 
               <form action="#">
                 <select id="theme" name="theme" onchange="previewFunction()">
@@ -37,7 +38,8 @@
                   <option value="fire" class="fire-option">Fire</option>
                 </select>
               </form>
-              <img src="sound-off.svg" alt="Sound Off">
+              <img src="sound-off.svg" alt="Sound Off" class="sound">
+            </div>
             <!-- <div class="theme-menu">
               <ul>
                 <li>Rain</li>
