--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
     <div class="start-page">
       <img src="cloud.svg" alt="cloud" class="big-cloud" />
       <div class="cloud-content">
+        <div class="feeling-lucky" onmouseover="starText()" onmouseout="noStarText()">
+        <img src="star.svg" alt="Feeling lucky?" class="star-button">
+        <p class="lucky-p">Feeling lucky?</p>
+      </div>
         <h1 class="greeting">Good Morning!</h1>
         <p>What's your name?</p>
-        <input type="text" id="name" name="name" class="input-name"/>
-        <input type="submit" value="OK" class="ok-button">
+        <input type="text" id="name" name="name" placeholder = "Your name here..." class="input-name"/>
         <div class="time-theme-flex">
           <div>
             <!-- <button class="time-title" onclick="timeFunction()">Time</button> -->
             <h2 class="time-title">Time</h1>
             <div class="time-menu"></div>
-            <input class="time-input" min="5" value="5" type="number" />
+            <input class="time-input" min="5" value="5" step="5" type="number" />
           </div>
           <div>
             <h2 class="theme-title">Theme</h2>
