--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- <button class="time-title" onclick="timeFunction()">Time</button> -->
             <h2 class="time-title">Time</h1>
             <div class="time-menu"></div>
-            <input class="time-input" min="5" value="5" step="5" type="number" />
+            <input class="time-input" min="5" max="30"  value="5" step="5" type="number" />
           </div>
           <div>
             <h2 class="theme-title">Theme</h2>
