--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <img src="cloud.svg" alt="cloud" class="big-cloud" />
       <div class="cloud-content">
         <div class="feeling-lucky" onmouseover="starText()" onmouseout="noStarText()">
-        <img src="star.svg" alt="Feeling lucky?" class="star-button">
+        <p><img src="star.svg" alt="Feeling lucky?" class="star-button"></p>
         <p class="lucky-p">Feeling lucky?</p>
       </div>
         <h1 class="greeting">Good Morning!</h1>
-        <p>What's your name?</p>
+        <p class="name-p">What's your name?</p>
         <input type="text" id="name" name="name" placeholder = "Your name here..." class="input-name"/>
         <div class="time-theme-flex">
           <div>
