--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img src="cloud.svg" alt="cloud" class="big-cloud" />
       <div class="cloud-content">
         <div class="feeling-lucky" onmouseover="starText()" onmouseout="noStarText()">
-        <p><img src="star.svg" alt="Feeling lucky?" class="star-button"></p>
+          <img src="star.svg" alt="Feeling lucky?" class="star-button">
         <p class="lucky-p">Feeling lucky?</p>
       </div>
         <h1 class="greeting">Good Morning!</h1>
