--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
           <div>
             <!-- <button class="time-title" onclick="timeFunction()">Time</button> -->
             <h2 class="time-title">Time</h1>
-            <div class="time-menu"></div>
-            <input class="time-input" min="5" max="30"  value="5" step="5" type="number" />
+            <div class="time-flex">
+            <input class="time-input" value="5:00" type="text" onchange="checkNumber()"/>
+            <div class="arrow-flex">
+              <img src="up-arrow.svg" alt="Increment Time" class="up-arrow">
+              <img src="down-arrow.svg" alt="Decrement Time" class="down-arrow">
+            </div>
+            </div>
           </div>
           <div>
             <h2 class="theme-title">Theme</h2>
