--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     />
   </head>
   <body onclick="locateClick(event)">
+    <img src="cloud.svg" alt="cloud" class="big-cloud" />
     <div class="start-page">
-      <img src="cloud.svg" alt="cloud" class="big-cloud" />
       <div class="cloud-content">
         <div class="heart-star-flex">
           <div class="frequently-used" class="frequently-hover" onmouseover="heartText()" onmouseout="noHeartText()">
@@ -78,6 +78,9 @@
           <button class="option-btn">Use Options</button>
         </div>
       </div>
+    </div>
+    <div class="second-content">
+        <p class="timer">10:00</p>
     </div>
 
     <!-- <div class="page-container">
