--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
     </div>
     <div class="second-content">
         <p class="timer">10:00</p>
+        <div class="play-stop-flex">
+        <img src="play-btn.png" alt="Play" class="play-btn">
+        <img src="stop-btn.png" alt="stop" class="stop-btn">
+      </div>
     </div>
 
     <!-- <div class="page-container">
@@ -116,3 +120,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+´
