--- a/index.html
+++ b/index.html
@@ -82,11 +82,21 @@
     <div class="second-content">
         <p class="timer">10:00</p>
         <div class="play-stop-flex">
-        <img src="play-btn.png" alt="Play" class="play-btn">
+        <img src="pause-btn.png" alt="Pause/Play" class="pause-btn">
         <img src="stop-btn.png" alt="stop" class="stop-btn">
       </div>
+      <div class="confirm-box">
+        <p class="confirm-quit">Are you sure you want to quit and return to start page?</p>
+        <button class="ok-btn">OK</button>
+        <button class="cancel-btn">Cancel</button>
+      </div>
     </div>
-
+    <div class="third-content"> 
+      <h3> Meditation Complete </h3>
+      <p class="restart-question"> Would you like to restart the meditation? </p>
+      <button class="yes-btn"> Yes </button>
+      <button class="no-btn"> No</button>
+      </div> 
     <!-- <div class="page-container">
       <h1 class="title">Head in the Clouds</h1>
       <div class="container">
