--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <h3> Meditation Complete </h3>
       <p class="restart-question"> Would you like to restart the meditation? </p>
       <button class="yes-btn"> Yes </button>
-      <button class="no-btn"> No</button>
+      <button class="return-btn"> Return to Start</button>
       </div> 
     <!-- <div class="page-container">
       <h1 class="title">Head in the Clouds</h1>
